fixed: container not showing

--- a/style.scss
+++ b/style.scss
@@ -17,6 +17,8 @@ html,body{
     // border: 1px solid black;
     width: fit-content;
     position: absolute;
+    top: 0;
+    left: 0;
     z-index: 1000000;
     &.hide{
         opacity: 0;
